Few path changes

--- a/frontend/src/styles/Styles.scss
+++ b/frontend/src/styles/Styles.scss
@@ -71,6 +71,10 @@ body[data-theme="dark"] {
 
         .last-updated {
             font-weight: 600;
+
+            li {
+                font-weight: 400;
+            }
         }
     }
 
